# dwarf-fortress-chinese

./: CLAUDE.md  CMakeLists.txt  LICENSE  README.md  README_EN.md  dfch.cpp  hooks.cpp  hooks.h  rulesets_manager.cpp  rulesets_manager.h  screen_manager.cpp  screen_manager.h  sentence_detector.cpp
.github/workflows/: build-plugin-windows.yml  build.yml  release.yml  watch-dfhack-release.yml
data/: dfch_config.txt  dfch_dict_exact.csv  dfch_dict_untrans.csv  dfch_dict_word.csv  dfzh_config.txt  dfzh_dict_exact.csv  dfzh_dict_word.csv
data/rulesets/: LICENSE.md
data/rulesets/zh-Hans/: adv_talk.toml  color.toml  construction_menu.toml  day.toml  health.toml  index.toml  memory.toml  name.toml  professions.toml  require.toml  rumor.toml  skills.toml  tasks.toml  thought.toml  tiles.toml  workshop.toml
data/rulesets/zh-Hans/adv/: attack.toml  burden.toml  claim.toml  climb.toml  direction.toml  getmenu.toml  hold.toml  index.toml  lead.toml  mount.toml  view.toml
data/rulesets/zh-Hans/creatures/: caste.toml  index.toml  name.toml
data/rulesets/zh-Hans/dwarf_language/: adj.toml  dwarfname.toml  index.toml  none.toml  veb.toml
data/rulesets/zh-Hans/english_name/: adj.toml  index.toml  name.toml  none.toml  veb.toml
data/rulesets/zh-Hans/gems/: details.toml  index.toml
data/rulesets/zh-Hans/health/: bodypart.toml  condition.toml  index.toml  itemget.toml
data/rulesets/zh-Hans/items/: altar.toml  ammo.toml  amulet.toml  animaltrap.toml  anvil.toml  armor.toml  armorstand.toml  backpack.toml  bag.toml  ballistaarrowhead.toml  ballistaparts.toml  bar.toml  barrel.toml  bed.toml  bin.toml  blocks.toml  boltthrowerparts.toml  book.toml  bookbinding.toml  bookcase.toml  boulder.toml  box.toml  bracelet.toml  branch.toml  bucket.toml  cabinet.toml  cage.toml  catapultparts.toml  chain.toml  chair.toml  cheese.toml  cloth.toml  coffin.toml  coin.toml  corpse.toml  corpsepiece.toml  crown.toml  crutch.toml  die.toml  displaycase.toml  (+71 more)
data/rulesets/zh-Hans/materials/: index.toml  job.toml  state.toml
data/rulesets/zh-Hans/menu/: assemble.toml  collect.toml  craft.toml  dyer.toml  encrust.toml  forge.toml  glaze.toml  index.toml  kiln.toml  make.toml  sew.toml  smelt.toml  weave.toml
data/rulesets/zh-Hans/plants/: growth.toml  index.toml  name.toml  seed.toml
data/rulesets/zh-Hans/positions/: forest.toml  index.toml  mountain.toml
data/rulesets/zh-Hans/psychology/: event.toml  index.toml  memory.toml  needs.toml  thought.toml
dfzh/: config.cpp  config.h  dfzh.cpp  dict_manager.cpp  dict_manager.h  hook_common.h  hooks.cpp  hooks.h  logger.cpp  logger.h  rulesets_manager.cpp  rulesets_manager.h  screen_manager.cpp  screen_manager.h  sdl2_hooks.cpp  sdl2_hooks.h  sentence_detector.cpp  sentence_detector.h  ttf_manager.cpp  ttf_manager.h
loader/: info.txt
loader/scripts_modinstalled/: dfzh_loader.lua
